CZHDEV-823 Fix mobile title vertical spacing

--- a/src/modules/focus_card/focus_card.scss
+++ b/src/modules/focus_card/focus_card.scss
@@ -38,6 +38,9 @@
 
   &__image {
     @include mq($from: tiny, $to: medium) {
+      display: block;
+      margin-bottom: $sizeRegular;
+
       @include gridNestedOffset('width' 'height' 'min-width' 'min-height', 6, $gridWidthColumns, $trailingGutter: false);
     }
     @include mq($from: medium) {
